# scost

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  taplo.toml
config/: config.toml
src/: bucket.rs  global.rs  instance.rs  interpreter.rs  lib.rs  main.rs
src/command/: copy.rs  list.rs  mod.rs  remove.rs  sign.rs
src/config/: args.rs  config.rs  mod.rs
