[package]
name = "scost"
authors = ["RinChanNOWWW <rin_chan_now@outlook.com>"]
description = "Simple COS (Tencent Cloud OSS) table to manage objects with same names across multiple buckets."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "env"] }
futures = "0.3.31"
opendal = { version = "0.52.0", features = ["services-cos"] }
prettytable-rs = "0.10.0"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serfig = "0.1.0"
state = "0.6.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"
